# alllivesmatter.world

./: .gitignore  LICENSE  README.md  index.html  mdx-components.tsx  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ptools/: compress_png_images.js  generate_llms_txt.js  generate_logo_helper.js  generate_message.js  generate_zh_tw.js  merge_i18n_for_types.js  reduce_countries_data.js
ptools/assets/: Thanks.md  email_signature.html  x.md
ptools/human_passport/: Cargo.toml  README.md  human_passport.json
ptools/human_passport/methods/guest/: Cargo.toml
ptools/human_passport/methods/guest/src/: main.rs
public/: _headers  email_signature.html  robots.txt
public/i18n/: en.json  es.json
scripts/: extract-faq-to-mdx.mjs
src/: App.tsx  i18n.ts  index.css  index.css.bak  main.tsx
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/assets/: countries.json  i18config.ts  locale-utils.ts  metadata.json
src/components/: ActionGroup.tsx  ActionModal.tsx  AdvocacyPoster.tsx  AdvocateCard.tsx  AdvocateModalCard.tsx  AllLivesMatterWorldSunflowPetal.tsx  AlmIcon.tsx  AlmIconPoster.tsx  AlmIconUnit.tsx  AlmIcons.tsx  AnimatedLoading.tsx  BookButtons.tsx  DukiTermsCard.tsx  EclipseShader.tsx  FaqMdxContent.tsx  FightWarWithHumanity.tsx  Footer.tsx  HalfDao.tsx  Header.tsx  HighlightText.tsx  ImageGalleryModal.tsx  KindKang.tsx  LazyWorld.tsx  LocaleRedirect.tsx  PeaceMusicPlayer.tsx  PeaceSong.tsx  PortraitImageDisplay.tsx  Poster.tsx  ShareTargets.tsx  ShareToWorld.tsx  ThankYouLetter.tsx  World.tsx  (+3 more)
(+122 files in other folders)
