[package]
name = "human_passport"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
sha2 = "0.10.6"
pbkdf2 = "0.12.2"
base64 = "0.21"
human-passport-core = { path = "../../core" }
risc0-zkvm = { "version" = "1.0.5", default-features = false,  "features" = ["std"] }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
